--- a/TemperatureProject.Api/appsettings.json
+++ b/TemperatureProject.Api/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "TemperatureDeviceConfiguration": {
+    "ConnectionString": "datasource=localhost;port=3306;username=root;password=;SSL Mode=None",
+    "DatabaseName": "temperatury",
+    "TableName":  "pomiary"
+  }
+
 }
