Request handling, services and stuff

--- a/TemperatureProject.Core/TemperatureProject.Core.csproj
+++ b/TemperatureProject.Core/TemperatureProject.Core.csproj
@@ -5,15 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TemperatureProject.Core\TemperatureProject.Core.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Command\" />
+    <Folder Include="Helpers\" />
+    <Folder Include="RestApiClient\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
