--- a/TemperatureProject.Api/TemperatureProject.Api.csproj
+++ b/TemperatureProject.Api/TemperatureProject.Api.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
+    <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
@@ -15,6 +18,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TemperatureProject.Contract\TemperatureProject.Contract.csproj" />
+    <ProjectReference Include="..\TemperatureProject.Core\TemperatureProject.Core.csproj" />
+    <ProjectReference Include="..\TemperatureProject.Handlers\TemperatureProject.Handlers.csproj" />
+    <ProjectReference Include="..\TemperatureProject.Infrastructure\TemperatureProject.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
