--- a/TemperatureProject.Infrastructure/TemperatureProject.Infrastructure.csproj
+++ b/TemperatureProject.Infrastructure/TemperatureProject.Infrastructure.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TemperatureProject.Core\TemperatureProject.Core.csproj" />
+  </ItemGroup>
+
 </Project>
