Communication with device + XML

--- a/TemperatureProject.Api/TemperatureProject.Api.csproj
+++ b/TemperatureProject.Api/TemperatureProject.Api.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>D:\I\PRACA MAGISTERSKA\MAGISTERKA\Backend\TemperatureProject\TemperatureProject.Api\TemperatureProject.Api.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
     <PackageReference Include="MediatR" Version="9.0.0" />
