--- a/TemperatureProject.Core/TemperatureProject.Core.csproj
+++ b/TemperatureProject.Core/TemperatureProject.Core.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    <PackageReference Include="MySql.Data" Version="8.0.27" />
   </ItemGroup>
 
 </Project>
