--- a/TemperatureProject.Api/appsettings.json
+++ b/TemperatureProject.Api/appsettings.json
@@ -11,5 +11,8 @@
     "ConnectionString": "datasource=localhost;port=3306;username=root;password=;SSL Mode=None",
     "DatabaseName": "temperatury",
     "TableName": "pomiary"
+  },
+  "LocalDatabaseConfiguration": {
+    "MyConnection": "Data Source=DESKTOP-I3F3L90\\SQLEXPRESS;Initial Catalog=TemperatureProject;Integrated Security=true"
   }
 }
