--- a/TemperatureProject.Domain/TemperatureProject.Domain.csproj
+++ b/TemperatureProject.Domain/TemperatureProject.Domain.csproj
@@ -6,12 +6,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TemperatureProject.Core\TemperatureProject.Core.csproj" />
+    <ProjectReference Include="..\TemperatureProject.Database\TemperatureProject.Database.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Entities\" />
     <Folder Include="Factories\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
