--- a/TemperatureProject.Api/TemperatureProject.Api.csproj
+++ b/TemperatureProject.Api/TemperatureProject.Api.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>D:\I\PRACA MAGISTERSKA\MAGISTERKA\Backend\TemperatureProject\TemperatureProject.Api\TemperatureProject.Api.xml</DocumentationFile>
+    <DocumentationFile>$(ProjectDir)\TemperatureProject.Api\TemperatureProject.Api.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
