Dodanie komentarzy do Swaggera

--- a/TemperatureProject.Api/appsettings.json
+++ b/TemperatureProject.Api/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "LocalDatabaseConfiguration": {
-    "MyConnection": "Data Source=DESKTOP-I3F3L90\\SQLEXPRESS;Initial Catalog=TemperatureProject;Integrated Security=true"
+  "LocalDatabaseConfiguration": { // Enter local server name here: "Data Source=..."
+    "MyConnection": "Data Source=DESKTOP-TD8S8I7;Initial Catalog=TemperatureProject;Integrated Security=true"
   }
 }
